# SuperRTL

./: .dockerignore  .gitignore  .superrtl.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  simulation.vcd  test.v
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: BOUNDARIES.md  INSTALL.md  INTRODUCTION.md  POSTER.md  README.md  RELEASE.md
examples/: alu.v  counter.v  counter_tb.v  tb_alu.v
scripts/: ai_flywheel.md  bump_version.py  check_release.py  hermes_project.md  validate_skills.py
shared/skills/: verilog_arbiter.md  verilog_axi_lite.md  verilog_axi_lite_slave.md  verilog_cdc.md  verilog_combinational_logic.md  verilog_crc.md  verilog_debouncer.md  verilog_edge_detector.md  verilog_fifo.md  verilog_fifo_async.md  verilog_fifo_sync.md  verilog_fir_filter.md  verilog_formal.md  verilog_fsm.md  verilog_fsm_design.md  verilog_i2c.md  verilog_memory.md  verilog_pwm.md  verilog_reset_sync.md  verilog_sequential_logic.md  verilog_spi.md  verilog_testbench.md  verilog_uart.md
shared/templates/: axi_lite_slave.v  clk_div.v  counter.v  decoder.v  fsm.v  mux.v  ram.v  register.v  shift_reg.v  sync_fifo.v  synchronizer.v
shared/waveform/: viewer.html
src/superrtl/: __init__.py  cleanup.py  cli.py  deps.py  logging.py  project.py  runtime.py  server.py  setup.py  validation.py
src/superrtl/resources/: __init__.py  skills.py  templates.py
src/superrtl/tools/: __init__.py  compile.py  formal.py  lint.py  protocol_decode.py  review.py  simulate.py  simulate_parallel.py  synthesize.py  testbench.py  verify.py  waveform.py  waveform_server.py
src/superrtl/utils/: __init__.py  verilog.py
tests/: conftest.py  test_cli.py  test_compile.py  test_deps.py  test_error_handling.py  test_formal.py  test_integration.py  test_mcp_prompts.py  test_project.py  test_protocol_decode.py  test_resources.py  test_review.py  test_server.py  test_simulate_parallel.py  test_testbench.py  test_utils.py  test_verify.py  test_waveform.py
